--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,5 +1,6 @@
 p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: darkslategrey;
 }
 
 .navbar{
@@ -33,7 +34,9 @@ p {
 }
 
 .banner h1 {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
+    font-family: 'Amatic SC', cursive;
+    letter-spacing: 0.05em;
+    font-size: 70px;
 }
 
 .nogbedenken{
@@ -43,12 +46,12 @@ p {
    background-position: center bottom; 
    background-repeat: no-repeat;
    min-height: 350px;
-   padding: 30px 10px;
+   padding: 0.5px 10px;
 }
 .nogbedenken h3{
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
+    color: darkred;
+    font-family: 'Amatic SC', cursive;
+    font-size: 50px;
     font-style: italic;
     font-weight: 500;
 }
